# openaq-pipeline

./: .env.example  .gitignore  .sqlfluff  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
airflow/: Dockerfile  README.md  requirements.txt
airflow/dags/: openaq_datasets.py  openaq_ingest.py  openaq_transform.py
dbt/: README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/analyses/: history_gap_audit.sql
dbt/models/mart/: mart_annual_compare.sql  mart_country_compare.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_locations.sql  stg_measurements.sql  stg_sensors.sql
dbt/seeds/: known_bad_sensors.csv  schema.yml  who_thresholds.csv
docs/: PROJECT_CONTEXT.md  README.md  architecture.md
infra/: README.md  apis.tf  bigquery.tf  gcs.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ingestion/: README.md  constants.py
ingestion/openaq/: __main__.py  backfill.py  bq_load.py  client.py  config.py  gcs.py  ingest.py
looker/: README.md
scripts/: README.md  bootstrap.sh
tests/: README.md
tests/dags/: conftest.py  test_dag_integrity.py  test_dag_transform.py  test_ingest_task_behavior.py
tests/integration/: test_live_roundtrip.py
tests/unit/: test_backfill.py  test_client.py  test_gcs.py  test_ingest.py  test_who_constants.py  test_who_seed_sync.py
