[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openaq-pipeline"
version = "0.1.0"
description = "Batch data engineering pipeline comparing UAE and Pakistan air quality against WHO 2021 thresholds"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "dbt/target",
    "dbt/dbt_packages",
    ".terraform",
    "logs",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
