[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openaq-pipeline"
version = "0.1.0"
description = "Batch data engineering pipeline comparing UAE and Pakistan air quality against WHO 2021 thresholds"
requires-python = ">=3.12"
# Pins match airflow/requirements.txt — Phase 3 runs this package inside the
# Airflow image, so local/CI versions must agree with it.
dependencies = [
    "requests==2.31.0",
    "google-cloud-storage==2.16.0",
    "google-cloud-bigquery==3.21.0",  # backfill CLI's load/reconcile (Phase 5)
]

# Flat layout with non-package dirs (dbt/, airflow/, infra/, ...) breaks
# setuptools auto-discovery — declare the only Python package explicitly.
[tool.setuptools.packages.find]
include = ["ingestion*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "dbt/target",
    "dbt/dbt_packages",
    ".terraform",
    "logs",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["."]
